# agentic-movie-ticket-booking-system

./: .env.example  .gitignore  Dockerfile  PIPELINE_IMPROVEMENTS.md  README.md  app.py  docker-compose.yml  docker_deploy.sh  ingestion.py  main.py  movie_poster_feature_plan.md  pyproject.toml  start.sh  stop.sh  test.py
.github/workflows/: azure-deploy.yml
data/: bookings.json  movies.json  policy.json  showtimes.json  theaters.json  threators.json  users.json
infra/: main.bicep  provision.sh
scratch/: add_movie_data.py  check_db_schema.py  deduplicate_db_messages.py  inspect_db_ids.py  inspect_thread_state.py  migrate_chat_messages_dedup.py  test_chat_duplication.py  test_chat_integration.py  test_cloud_conns.py  test_conversational_interrupt.py  test_coupons.py  test_date_resolution.py  test_follow_up_booking.py  test_history_retention.py  test_json_load.py  test_langgraph_interrupt.py  test_poster_extraction.py  test_redis_conn.py  test_seat_immutability.py  test_seat_merge.py  test_streaming.py  test_thread_deletion.py
src/agents/: booking.py  cancellation.py  history.py  llm.py  memory.py  middleware.py  planner.py  policy.py  poster.py  recommendation.py  seat_selection.py  unknown.py
src/api/: auth.py  bookings_api.py  chat_api.py  chat_utils.py  movies_api.py  services.py  showtimes_api.py  theaters_api.py  users_api.py
src/config/: constants.py  settings.py
src/db/: json_store.py  postgres.py  seed.py  seed_redis.py
src/graph/: graph.py  router.py  state.py
src/memory/: episodic.py  long_term.py  short_term.py
src/prompts/: __init__.py  (+9 more)
(+27 files in other folders)
