[project]
name = "movie-booking-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-redis>=0.4.1",
    "openai>=2.41.0",
    "pydantic-settings>=2.14.1",
    "qdrant-client>=1.18.0",
    "redis<8",
    "uvicorn>=0.48.0",
]
